[package]
name = "veb"
version = "1.0.0"
authors = ["Zachary Neely <zach@zrnee.ly>"]
repository = "https://github.com/zrneely/veb-tree.git"
homepage = "https://github.com/zrneely/veb-tree.git"
description = "A Rust implementation of van Emde Boas trees"
documentation = "https://zrneely.github.io/veb-tree/"
keywords = ["tree"]
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clippy = {version = "*", optional = true}

[features]
default = []
dev = ["clippy"]
